--- a/project1/index.html
+++ b/project1/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
+
     <title>Project1 van DEKAB</title>
-    <script src="p5/p5.js"></script>
-    <script src="project.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <script src="sketch.js"></script>
 </body>
 </html>
